[gd_scene load_steps=8 format=2]

[ext_resource path="res://Components/Accuracy/AccuracyComp.gd" type="Script" id=1]
[ext_resource path="res://Components/Damage/DamageComp.gd" type="Script" id=2]
[ext_resource path="res://Components/CriticalStrike/CriticalComponent.gd" type="Script" id=3]
[ext_resource path="res://Components/Weapons/WeaponReceiver/WeaponReceiver.gd" type="Script" id=4]
[ext_resource path="res://Components/Damage/DamageComp.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/CriticalStrike/CriticalComponent.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/Accuracy/AccuracyComp.tscn" type="PackedScene" id=7]

[node name="WeaponReceiver" type="Node2D"]
script = ExtResource( 4 )

[node name="DamageComp" type="Node2D" parent="." instance=ExtResource( 5 )]
script = ExtResource( 2 )

[node name="AccuracyComp" type="Node2D" parent="." instance=ExtResource( 7 )]
script = ExtResource( 1 )

[node name="CriticalStrikeComp" type="Node2D" parent="." instance=ExtResource( 6 )]
script = ExtResource( 3 )
